src/components/Button/Button.module.css
.Button {
  @apply rounded-md border border-transparent transition ease-in-out duration-150;
  @apply font-medium text-white text-base leading-base-normal;
  @apply px-4 py-2.75;
  @apply self-center;
  @apply bg-brand border-brand;

  &:hover {
    @apply bg-brand-hover;
  }

  &:focus {
    @apply outline-none;
    @apply shadow-outline-brand;
  }

  span {
    @apply align-base;
  }
}

.Icon {
  @apply inline-block -ml-1 mr-1;

  svg {
    @apply h-lg;
  }
}

.slim {
  @apply px-4 py-2.5;
  @apply text-sm leading-sm-normal;

  .icon {
    svg {
      @apply h-base;
    }
  }
}

.large {
  @apply px-6 py-3 text-lg;

  span {
    @apply align-lg;
  }
}

.disabled {
  @apply opacity-40;
  @apply cursor-default pointer-events-none;
}

.plain {
  @apply bg-transparent border-transparent text-carbon-80%;

  &:hover {
    @apply bg-arctic;
  }

  &:focus {
    @apply shadow-outline;
  }
}

.outline {
  composes: plain;
  @apply border-arctic;

  &:hover {
    @apply border-carbon-20%;
  }

  &:focus {
    @apply border-arctic;
  }
}

.brandOutline {
  @apply text-brand bg-transparent;

  &:hover {
    @apply bg-brand-lightest;
  }

  &:focus:not(:hover) {
    @apply bg-transparent;
  }
}

